--- a/css/navbar.css
+++ b/css/navbar.css
@@ -246,6 +246,7 @@ header{
 @media only screen and (max-width: 600px) {
     header{
         height: 7rem;
+        border-radius: 0;
     }
     
     .banner-text{
