--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ body{
     font-family: Roboto, sans-serif;
     color: #001133;
     font-size: 1.15rem;
+    overflow-x: hidden;
 }
 
 .body-content{
@@ -17,7 +18,8 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    border-radius: 5%;
+    
+    border-radius: 50px;
 }
 
 #main-table{
@@ -189,19 +191,28 @@ body{
     #main-table{
         padding: 7rem 3rem 3rem 3rem;
     }
-
-    .body-content{
-        border-top-right-radius: 7%;
-        border-top-left-radius: 7%;
-    }
 }
 
 @media only screen and (max-width: 900px) {
+
+}
+
+@media only screen and (max-width: 600px) {
     #main-table{
-        padding: 7rem 3rem 3rem 3rem;
+        padding: 7rem 2rem 2rem 2rem;
     }
 
     .body-content{
-        border-top-right-radius: 9%;
-        border-top-left-radius: 9%;}
+        border-radius: 50px;
+        width: 90%;
+        height: 115rem;
+        background-color: #def9ff;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
 }
+
+
+
