--- a/css/index.css
+++ b/css/index.css
@@ -102,8 +102,6 @@ nav{
     outline-style: none;
     box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.5);
     font-weight: 500;
-    /* float: left;
-    overflow: hidden; */
 }
 
 .dropdown{
@@ -118,33 +116,52 @@ nav{
     margin: 0 1rem 0 0;
 }
    
-.dropdown-content {
-    display: none;
+.dropdown-content{
+    transform: translateX(-18%);
+    top: 120%;
+    width: 15rem;
+    height: 7rem;
+    display:none;
     position: absolute;
-    background-color: #f9f9f9;
-    border: 1px solid #437bff;
+    background-color: #046e60;
+    border: 1px solid #fff;
     min-width: 160px;
     z-index: 1;
+    border-radius: 20px;
 }
   
-.dropdown-content a {
+.dropdown-content::before{
+    border: 1rem solid transparent;
+    border-right-color: #046e60;
+    content: "";
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -100%) rotate(90deg);
+}
+
+.dropdown-content a{
+    border-radius: 15px;
     float: none;
-    color: #437bff;
+    color: #fff;
+    width: 14rem;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
+
+.wrap{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
     
+.dropdown-content a:hover {
+    background-color: #229182;
+    transition: .2s;
+}
+
 .show {
     display: block;
 }
-
-/* .other-contents{
-    margin-left: 7rem;
-} */
-
-/* .other-contents p{
-    font-size: 0.8rem;
-    margin-top: 0.9rem;
-} */
