--- a/css/index.css
+++ b/css/index.css
@@ -75,13 +75,13 @@ nav{
    
 .dropdown-content{
     transform: translateX(-18%);
-    top: 135%;
+    top: 210%;
     width: 15rem;
     height: 7rem;
     display:none;
     position: absolute;
     background-color: #046e60;
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
     min-width: 160px;
     z-index: 1;
     border-radius: 20px;
@@ -93,7 +93,7 @@ nav{
     content: "";
     left: 50%;
     position: absolute;
-        transform: translate(-50%, -100%) rotate(90deg);
+    transform: translate(-50%, -100%) rotate(90deg);
 }
 
 .dropdown-content a{
@@ -148,6 +148,14 @@ nav{
     visibility: visible;
 }
 
+.responsive-menu .fas{
+    position: absolute;
+    visibility: hidden;
+    font-size: 1.8rem;
+    z-index: 20;
+    color: #fff;
+}
+
 @keyframes nav-button-animation {
     from {background-color: #046e60;}
     to {background-color: #0c9280;}
@@ -193,6 +201,8 @@ nav{
     }
 
     .responsive-menu .fas{
-        font-size: 1.8rem;
+        position: relative;
+        visibility: visible;
+
     }
 }
