--- a/css/dev-web.css
+++ b/css/dev-web.css
@@ -30,8 +30,15 @@
     height: 100%;
     /* background-color: rgba(0, 0, 0, 0.185); */
     flex: 1;
-    margin: 0 1rem 0 1rem;
+    margin: 0 0rem 0 0rem;
     position: relative;
+}
+
+.col :{
+    content: "";
+    width: 1rem;
+    height: 1rem;
+    background-color: aqua;
 }
 
 .p-title{
