--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ section{
     font-weight: bold;
 }
 
-/* CONHECIMENTOS --------------------------------------*/
+/* EXPERIENCIAS --------------------------------------*/
 
 .section-knoledge{
     margin: 3rem 0;
@@ -225,81 +225,100 @@ section{
     padding: 1.5rem;
 }
 
-/* JOBS -------------------------------------------*/
 
-.section-jobs{
-    margin: 3rem 0;
-    /* background-color: aqua; */
+
+
+
+
+
+
+.knoledge-timeline{
+    transition: 0.5s;
 }
 
-.section-jobs-wrapper{
-    width: 1440px;
-    padding: 1.5rem;
-}
-
-/* TIMELINE ------------------------------------------ */
-
-.timeline{
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    overflow: hidden;
-    position: relative;
-}
-
-.timeline-line{
-    height: 50rem;
-    width: 0.4rem;
-    background-color: #00000036;
-    content: "";
-    position: absolute;
-    left: 0.2rem;
-}
-
-.timeline-row{
+.knoledge-row{
     display: flex;
     flex-direction: row;
+    width: 100%;
+    /* transition: 0.5s; */
 }
 
-.timeline-space{
-    margin: 1rem 0;
+.knoledge-column{
+    display: flex;
+    flex-direction: column;
+    flex: 4;
+    /* transition: 0.5s; */
 }
 
-.timeline-dot{
+.column-line{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+    position: relative;
+    /* transition: 0.5s; */
+}
+
+.column-line .line{
+    width: 0.3rem;
+    height: 25rem;
+    background-color: aqua;
     position: absolute;
-    width: 0.8rem;
-    height: 0.8rem;
+    /* transition: 0.5s; */
+}
+
+.column-line-icon{
+    z-index: 3;
+    width: 3rem;
+    height: 3rem;
     border-radius: 50px;
-    content: "";
-    background-color: rgb(41, 141, 255);
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.timeline-label{
-    margin-left: 1.8rem;
-    width: 500px;
-    min-width: 300px;
-    font-size: 14px;
+.column-line svg{
+    width: 2rem;
 }
 
-.timeline-content{
-    margin: 0 0 0 2rem;
-    text-align: justify;
-    line-height: 25px;
+.knoledge-column-title{
+
 }
 
-.timeline-label-title{
-    margin: 0.4rem 0;
-    font-size: 17px;
+.knoledge-column-content{
+    /* display: none; */
+    /* position: absolute; */
+    height: 0rem;
+    opacity: 0;
+    color: transparent;
+    transition: 0.3s;
 }
 
-.timeline-label-title p:first-child{
-    font-weight: bold;
+.knoledge-row:hover .knoledge-column-content{
+    opacity: 1;
+    color: black;
+    height: auto;
+    transition: 0.3s;
+    /* transition-delay: 5s;  */
+
+    /* position: relative; */
+    /* display: block; */
 }
 
-.timeline-label-title p:last-child{
-    font-weight: bold;
-    font-size: 15px;
+/* .knoledge-column:not( :hover ) .knoledge-column-content {
+    transition: 0.5s;
+    transition-delay: 5s; 
+} */
+
+.knoledge-column-title:hover .line{
+    /* width: 0.3rem; */
+    /* height: 20rem; */
+    /* transition: 0.5s; */
 }
+
+
 
 
 /* RODAPE --------------------------------------*/
@@ -392,5 +411,4 @@ footer{
         width: 380px;
     }
 }
-
 
