--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,6 @@ body{
 .hero-backdrop{    
   width: 100%;
   height: 100vh;
-
   background: 
     center / cover no-repeat url(../img/Assets/Hero/HeroTexture.jpg),
     linear-gradient(135deg, rgba(81,192,252,1) 0%, rgba(203,237,255,1) 50%, rgba(173,107,255,1) 100%) 
@@ -46,7 +45,6 @@ body{
 }
 
 .hero-name{
-  /* width: 60%; */
   background-color: #E6F3FA;
   border-radius: 30px;
   padding: 1rem 2rem;
@@ -86,7 +84,7 @@ h1 p{
 }
 
 .button:hover{
-  background-color: #AD6BFF !important; 
+  background-color: #AD6BFF; 
   color: #E6F3FA;
   font-weight: bold;
   transform: translateY(-20%);
@@ -113,20 +111,30 @@ h1 p{
   font-size: 16px;
 }
 
-.hero-content-contact::first-line{
+.hero-content-contact span{
+  margin-left: 1rem;
   font-weight: bold;
   font-size: 18px;
 }
 
-
 .hero-content-about{
+  margin: 0rem 1rem 0 1rem ;
   text-align: left;
-  flex: 3;
+  flex: 2;
+}
+
+.hero-content-about span{
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 30px;
 }
 
 .hero-content-about h2{
   font-size: 18px;
   font-weight: lighter;
+  
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .hero-content .markdown{
@@ -139,17 +147,38 @@ h1 p{
 }
 
 .hero-content-contact a{
+  padding: 0 1rem 0 1rem;
   text-decoration: none;
   color: #003552;
-  display: block;
-  justify-content: center;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
   align-items: center;
 }
 
-.hero-content-contact img{
-  height: 16px;
-  color: #003552;
+.hero-content-contact svg{
+  height: 18px;
+  width: 18px;
+  display: inline-block;
+  fill: #003552;
+  margin-right: .3rem;
 }
+
+.hero-content-contact a:hover{
+  background-color: #AD6BFF; 
+  color: #E6F3FA;
+  font-weight: bold;
+  transition: 0.3s;
+  transition-delay: 0.05s;
+}
+
+.hero-content-contact a:hover svg{
+  fill: #E6F3FA;
+  transition: 0.3s;
+  transition-delay: 0.05s;
+}
+
+
 
 /* 
 Branco Texto        -       #E6F3FA
