--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body{
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   color: #003552;
+  overflow-x: hidden;
 }
 
 #hero{
@@ -183,13 +184,54 @@ h1 p{
   transition: 0.3s;
   transition-delay: 0.05s;
 }
+  
+.projects-wave{
+  position: relative;
+  width: 100vw;
+}
 
+.wave-violet{
+  transform: translate(-20%, -100%);
+  width: 500%;
+  height: 3rem;
+  background-image: url("../img/Assets/Hero/WaveViolet.svg");
+  background-repeat: repeat-x;
+  background-position: 30px 0;
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  animation: slide 50s ease-out infinite;
+}
 
+.wave-cyan{
+  transform: translate(-70%, -100%);
+  width: 500%;
+  height: 3rem;
+  background-image: url("../img/Assets/Hero/WaveCyan.svg");
+  background-repeat: repeat-x;
+  background-position: 30px 0;
+  position: absolute;
+  z-index: 2;
+  animation: slide 80s ease-in infinite;
+}
 
+.wave-heavenblue{
+  transform: translate(0, -100%);
+  width: 500%;
+  height: 3rem;
+  background-image: url("../img/Assets/Hero/WaveHeavenBlue.svg");
+  background-repeat: repeat-x;
+  background-position: 0 0;
+  position: absolute;
+  z-index: 3;
+  /* animation: slide 0s linear infinite; */
+}
 
-
-
-
+@keyframes slide {
+  0%{left: 0;}
+  50%{left: -200%;}
+  100%{left: 0;}
+}
 
 #projects{
   width: 100%;
@@ -197,48 +239,19 @@ h1 p{
   display: flex;
   align-items: center;
   flex-direction: column;
+  background-color: #CBEDFF;
 }
-  
-.projects-wave{
-
-}
-
-.wave-cyan{
-  width: 100%;
-  height: 2rem;
-  background-image: url("../img/Assets/Hero/WaveCyan.svg");
-  content: "";
-}
-
-.wave-violet{
-  width: 100%;
-  height: 2rem;
-  background-image: url("../img/Assets/Hero/WaveViolet.svg");
-  content: "";
-}
-
-.wave-heavenblue{
-  width: 100%; 
-  height: 2rem;
-  background-image: url("../img/Assets/Hero/WaveHeavenBlue.svg");
-  content: "";
-}
-
-
-
-
-
-
-
 
 .projects-content{
   width: 1400px;
+  background-color: #CBEDFF;
 }
 
 
 
 
 
+/* font-size: 25.5px; */
 
 
 
@@ -303,7 +316,6 @@ Tom Claro Fundo     -       #B1CCFA
 Tom Violeta         -       #AD6BFF
 Tom Violeta Fundo   -       #791AED
 */
-
 
 /* MEDIA QUERRY --------------------------------------*/
 
