--- a/css/styles.css
+++ b/css/styles.css
@@ -204,15 +204,15 @@ h1 p{
 }
 
 .wave-cyan{
-  transform: translate(-70%, -100%);
+  transform: translate(0%, -100%);
   width: 500%;
   height: 3rem;
   background-image: url("../img/Assets/Hero/WaveCyan.svg");
-  background-repeat: repeat-x;
+  background-repeat: repeat;
   background-position: 30px 0;
   position: absolute;
   z-index: 2;
-  animation: slide 80s ease-in infinite;
+  animation: slide 50s ease-in infinite;
 }
 
 .wave-heavenblue{
@@ -285,35 +285,15 @@ h1 p{
   height: 15rem;
   border-radius: 20px;
   box-shadow: 2px 2px 10px #003552;
-}
-
-#CardVistoAqui{
-  background: rgb(11,150,224);
-  background: 
-    /* center / cover repeat url(../img/Assets/Projects/Backdrop/1.svg), */
-    linear-gradient(180deg, rgba(11,150,224,1) 0%, rgba(0,53,82,1) 100%)
-    ;
-  /* background-blend-mode: screen;
-  mix-blend-mode: screen; */
-}
-
-#LogoCardVistoAqui{
-  background-image: url("../img/Assets/Projects/Branding/VistoAquiLogo.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.card{
   position: relative;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
 }
+
+/* .card{
+} */
 
 .card-logo{
   width: 220px;
+  max-width: 220px;
   height: 5rem;
 }
 
@@ -333,39 +313,28 @@ h1 p{
   background-repeat: no-repeat;
 }
 
-#IconAngular{
+.IconAngular{
   background-image: url("../img/Assets/Projects/Languages/Angular.svg");  
 }
 
-#IconBootstrap{
+.IconBootstrap{
   background-image: url("../img/Assets/Projects/Languages/Bootstrap.svg");  
 }
 
-#IconCss{
+.IconCss{
   background-image: url("../img/Assets/Projects/Languages/Css.svg");  
 }
 
-#IconHtml{
+.IconHtml{
   background-image: url("../img/Assets/Projects/Languages/Html.svg");  
 }
 
-#IconJs{
+.IconJs{
   background-image: url("../img/Assets/Projects/Languages/Js.svg");  
 }
 
-#IconSass{
+.IconSass{
   background-image: url("../img/Assets/Projects/Languages/Sass.svg");  
-}
-
-
-.card-overlay{
-  opacity: 0;
-  /* transition: 1s; */
-  position: absolute;
-  color: #E6F3FA;
-  font-weight: bold;
-  text-shadow: 1px 1px 3px #003552;
-  font-size: 22px;
 }
 
 .projects-item:hover{
@@ -382,29 +351,126 @@ h1 p{
   position: absolute;
 }
 
+.card-overlay{
+  opacity: 0;
+  /* transition: 1s; */
+  position: absolute;
+  color: #E6F3FA;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px #003552;
+  font-size: 22px;
+  text-decoration: none;
+  height: 15rem;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-overlay p{
+  margin: 1rem 0 2rem 0;
+  font-weight: lighter;
+  font-size: 18px;
+  padding: 0 1rem;
+}
+
 .projects-item:hover .card-overlay{
   opacity: 1;
   transition: 1s;
   position: relative;
 }
 
-.card-overlay p{
-  margin: 1rem 0;
-  font-weight: lighter;
-  font-size: 18px;
-  padding: 0 1rem;
-}
-
 .card-overlay .item-btn{
-  text-decoration: none;
   font-size: 18px;
   color: #E6F3FA;
   border: #E6F3FA;
   border-style: solid;
   border-radius: 15px;
-  padding: 0.3rem;
+  padding: 0.3rem 0.8rem;
   text-shadow: 1px 1px 3px #003552;
+  /* width: 100%; */
 }
+
+/* ----------------------------logo dos cards projetos ----------------------------*/
+
+#Card-1-1{
+  background: rgb(11,150,224);
+  background: 
+    linear-gradient(180deg, rgba(11,150,224,1) 0%, rgba(0,53,82,1) 100%)
+    ;
+}
+
+#LogoCard-1-1{
+  background-image: url("../img/Assets/Projects/Branding/VistoAquiLogo.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#Card-1-2{
+  background: rgb(11,150,224);
+  background: 
+    linear-gradient(180deg, rgba(11,150,224,1) 0%, rgba(0,53,82,1) 100%)
+    ;
+}
+
+#LogoCard-1-2{
+  background-image: url("../img/Assets/Projects/Branding/BluemountainsLogo.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#Card-1-3{
+  background: rgb(11,150,224);
+  background: 
+    linear-gradient(180deg, rgba(11,150,224,1) 0%, rgba(0,53,82,1) 100%)
+    ;
+}
+
+#LogoCard-1-3{
+  background-image: url("../img/Assets/Projects/Branding/CocobomLogo.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#Card-1-4{
+  background: rgb(11,150,224);
+  background: 
+    linear-gradient(180deg, rgba(11,150,224,1) 0%, rgba(0,53,82,1) 100%)
+    ;
+}
+
+#LogoCard-1-4{
+  background-image: url("../img/Assets/Projects/Branding/DataChampLogo.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+
+
+
+/* #Card-1-1{
+  background: rgb(11,150,224);
+  background: 
+    center / cover repeat url(../img/Assets/Projects/Backdrop/1.svg),
+    linear-gradient(180deg, rgba(11,150,224,1) 0%, rgba(0,53,82,1) 100%)
+    ;
+  background-blend-mode: screen;
+  mix-blend-mode: screen;
+}
+
+#LogoCard-1-1{
+  background-image: url("../img/Assets/Projects/Branding/VistoAquiLogo.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+} */
+
+/* ---------------------------- fim logo dos cards projetos ----------------------------*/
 
 footer{
   width: 100%;
